# rust_test_capnp

./: Cargo.toml  ReadMe.md  build.rs
schema/: hello_world.capnp
src/: client.rs  main.rs  server.rs
