[package]
name = "rust_test_capnp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "build.rs"

[[bin]]
name = "rust_test_capnp"
path = "src/main.rs"

[dependencies]
capnp = "0.19" # Note this is a different library than capnp*c*
capnp-rpc = "*"
tokio = { version = "*", features = ["full"] }
futures = "*"
tokio-util = { version = "*", features = ["full"] }

[build-dependencies]
capnpc = "0.19"
